# gLexShrD

./: .gitignore  Cargo.toml  ReadMe.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  config.yml  feature.yml
src/: lib.rs
src/core/: barrier.rs  mod.rs  type_state_queue.rs
src/core/backend/: helpers_for_types.rs  mod.rs  types.rs
src/core/cmd/: buffer.rs  mod.rs  pool.rs
src/core/exec/: command.rs  executor.rs  frame.rs  lane.rs  mod.rs  recorder.rs
src/core/render/: cache.rs  mod.rs  pipeline.rs  renderbuilder.rs
src/core/resource/: buf_state.rs  buffer.rs  descriptor.rs  image.rs  image_view.rs  mod.rs  pool.rs  sampler.rs
src/core/sync/: binarysemaphore.rs  frame_sync.rs  mod.rs  timeline.rs
src/domain/: error.rs  mod.rs  resource.rs  types.rs
src/infra/: mod.rs
src/infra/platform/: linux.rs  mod.rs  surface.rs
src/infra/platform/linux/: platform_impl.rs
src/infra/vulkan/: backend.rs  context.rs  glex.rs  memory.rs  mod.rs
src/infra/vulkan/backend/: backend_trait.rs  device.rs  entry.rs  error.rs  instance.rs  physical_device.rs  queue.rs  staging.rs  swapchain.rs
src/infra/vulkan/context/: gpu_context.rs  init.rs  presentation.rs  renderer.rs
src/infra/vulkan/memory/: free_list.rs  gpu_alloc.rs  return_q.rs  suballoc.rs
src/renderer/: mod.rs  pipelines.rs  prelude.rs  shader_utils.rs  shaders.rs  windowed.rs
src/renderer/pipelines/: client_decor.rs  csdpipeline.rs  particle_pipies.rs  text.rs
src/renderer/shaders/: csd_rect.rs  csd_text.rs  particle_vortex.rs
src/renderer/shaders/particle_vortex/: helpers.rs  particle_comp.rs  particle_frag.rs  particle_vert.rs
tests/: csd_test.rs
